--- a/src/Components/Movies/movies.scss
+++ b/src/Components/Movies/movies.scss
@@ -11,16 +11,18 @@
       display: none;
     }
     width: 100%;
-    height: 3rem;
-    margin-top: 3.5rem;
+    margin-top: 3rem;
     background-color: #0c0c0c;
+    display: flex;
+    justify-content: center;
     .github__Repo {
+      width: fit-content;
       font-family: "Open Sans", sans-serif;
       color: white;
       text-align: center;
       padding-top: 0.75rem;
       font-size: 0.8rem;
-      margin-top: -3rem;
+      margin-top: -3.5rem;
       text-decoration: underline;
       cursor: pointer;
     }
