--- a/src/Components/Movies/movies.scss
+++ b/src/Components/Movies/movies.scss
@@ -68,7 +68,7 @@
       display: flex;
       position: relative;
       top: -4rem;
-      .middlePoster {
+      .heroBanner {
         z-index: 1;
         width: 100%;
         height: 100%;
@@ -143,7 +143,7 @@
   .moviesPage__Wrapper {
     .innerWrapper {
       .upper__Hero__Portion {
-        .middlePoster {
+        .heroBanner {
           .innerData {
             h1 {
               font-size: 1.5rem;
@@ -165,7 +165,7 @@
   .moviesPage__Wrapper {
     .innerWrapper {
       .upper__Hero__Portion {
-        .middlePoster {
+        .heroBanner {
           .innerData {
             h1 {
               font-size: 1.2rem;
@@ -187,7 +187,7 @@
   .moviesPage__Wrapper {
     .innerWrapper {
       .upper__Hero__Portion {
-        .middlePoster {
+        .heroBanner {
           .innerData {
             padding-left: 0.5rem;
             align-items: center;
@@ -225,7 +225,7 @@
   .moviesPage__Wrapper {
     .innerWrapper {
       .upper__Hero__Portion {
-        .middlePoster {
+        .heroBanner {
           .innerData {
             margin-top: 1rem;
             align-items: center;
